--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -18,6 +18,7 @@ filter:
         - spec/
 # Excluding Sypex Dumper files
         - admin/sxd/*
+        - */sxd/*
 #        - "admin/sxd/**/*"
 # Excluding minified files
 #        - "**.min.js"
