CI-41a52.86: Patched Scrutenizer configuration

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -18,7 +18,7 @@ filter:
         - spec/
 # Excluding Sypex Dumper files
         - admin/sxd/*
-        - **/sxd/
+#        - **/sxd/
 #        - "admin/sxd/**/*"
 # Excluding minified files
 #        - "**.min.js"
