SKIN-misc-42a24.3: Added new classes for new skin engine

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -1,14 +1,11 @@
 ; Test Comment
 
-; gebaeude
-
-; Which skin properties this skin inherits
+; Skin name to inherit pictures from
+; If there is no required image - image from parent skin would be used
 ; _inherit = "none"
 
 ; abort = "pic/abort.gif"
-
 ; img/galaxie.gif = "pic/abort.gif"
-
 ; array_test[index_test] = "pic/test"
 
 ;<image name> = "<path>"
