TEMPLATE-misc-42a24.6: Refactoring. More tests

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -33,7 +33,7 @@
 ;        - ??? PTL block name "xxx.yyy" support ?
 
 ; Plug for no image - to override default system plug
-_no_image = "/design/images/_no_image.png"
+;_no_image = "/design/images/_no_image.png"
 
 ; Some black magic to support JS-templating
 ;UNIT_ID = "gebaeude/[UNIT_ID].gif"
