CODE-misc-42a25.2: Removed $dpath variable. Also some code refactoring

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -66,6 +66,10 @@ icon_note_pinned_16 = "/design/images/icon_note_pinned_16x16.png"
 icon_note_pinned_32 = "/design/images/icon_note_pinned_32x32.png"
 icon_note_pinned_64 = "/design/images/icon_note_pinned_64x64.png"
 
+icon_vacation = "/design/images/icon_vacation.png"
+icon_birthday = "/design/images/birthday.png"
+icon_buddy = "img/b.gif"
+
 ; Units
 1 = "gebaeude/1.gif"
 1001 = "gebaeude/1001.jpg"
