CI-misc-42a29.18: Changes in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ branches:
   only:
     - work-fleets
     - master
+    - trunk
 
 
 # see http://about.travis-ci.org/docs/user/languages/php/ for more hints
