--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,11 +1,11 @@
-#build:
-#    tests:
-#        override:
-#            -
-#                command: 'vendor/bin/phpunit --coverage-clover=some-file tests --config tests/phpunit.xml'
-#                coverage:
-#                    file: 'some-file'
-#                    format: 'clover'
+build:
+    tests:
+        override:
+            -
+                command: 'vendor/bin/phpunit --coverage-clover=some-file tests --config tests/phpunit.xml'
+                coverage:
+                    file: 'some-file'
+                    format: 'clover'
 filter:
     excluded_paths:
 ## Excluding Tests, Specs and Vendor Directories at any Level
