--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,7 +5,6 @@ engines:
     enabled: true
     config:
       languages:
-      - ruby
       - javascript
       - python
       - php
@@ -15,6 +14,12 @@ engines:
     enabled: true
   phpmd:
     enabled: true
+    config:
+          file_extensions:
+            - php
+            - inc
+#          rulesets: "cleancode,codesize,controversial,design,naming,unusedcode"
+          rulesets: "cleancode,codesize,controversial,naming,unusedcode"
 ratings:
   paths:
   - "**.css"
