CI-misc-43a3.16: Changes in .codeclimate.yml

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -49,3 +49,5 @@ exclude_paths:
 ## Excluding
 #- "admin/sxd/**/*"
 - admin/sxd/**/*
+# Excluding vars* files because of many false-positive duplicate detections
+- includes/vars*
