SKIN-feat-43a16.46: Added pictures for new event

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -72,46 +72,45 @@ icon_buddy = "img/b.gif"
 
 ; Units
 1 = "gebaeude/1.gif"
-1001 = "gebaeude/1001.jpg"
-1002 = "gebaeude/1002.jpg"
-1003 = "gebaeude/1003.jpg"
-1004 = "gebaeude/1004.jpg"
-1005 = "gebaeude/1005.jpg"
-1006 = "gebaeude/1006.png"
-1008 = "gebaeude/1008.jpg"
-1009 = "gebaeude/1008.jpg"
-1010 = "gebaeude/1008.jpg"
-;1009 = "gebaeude/1009.jpg"
-;1010 = "gebaeude/1010.jpg"
+2 = "gebaeude/2.gif"
+3 = "gebaeude/3.gif"
+4 = "gebaeude/4.gif"
+12 = "gebaeude/12.gif"
+14 = "gebaeude/14.gif"
+15 = "gebaeude/15.gif"
+21 = "gebaeude/21.gif"
+22 = "gebaeude/22.gif"
+23 = "gebaeude/23.gif"
+24 = "gebaeude/24.gif"
+31 = "gebaeude/31.gif"
+33 = "gebaeude/33.gif"
+34 = "gebaeude/34.gif"
+35 = "gebaeude/35.gif"
+41 = "gebaeude/41.gif"
+42 = "gebaeude/42.gif"
+43 = "gebaeude/43.gif"
+44 = "gebaeude/44.gif"
+
 106 = "gebaeude/106.gif"
 108 = "gebaeude/108.gif"
 109 = "gebaeude/109.gif"
 110 = "gebaeude/110.gif"
-1101 = "gebaeude/1101.jpg"
-1102 = "gebaeude/1102.jpg"
-1103 = "gebaeude/1103.jpg"
-1104 = "gebaeude/1104.jpg"
-1105 = "gebaeude/1105.jpg"
-1106 = "gebaeude/1106.jpg"
-1107 = "gebaeude/1107.png"
 111 = "gebaeude/111.gif"
 113 = "gebaeude/113.gif"
 114 = "gebaeude/114.gif"
 115 = "gebaeude/115.gif"
 117 = "gebaeude/117.gif"
 118 = "gebaeude/118.gif"
-12 = "gebaeude/12.gif"
+119 = "gebaeude/119.jpg"
 120 = "gebaeude/120.gif"
 121 = "gebaeude/121.gif"
 122 = "gebaeude/122.gif"
 123 = "gebaeude/123.gif"
-14 = "gebaeude/14.gif"
-15 = "gebaeude/15.gif"
+125 = "gebaeude/125.jpg"
 150 = "gebaeude/150.gif"
 151 = "gebaeude/151.gif"
-1601 = "gebaeude/1601.png"
 199 = "gebaeude/199.gif"
-2 = "gebaeude/2.gif"
+
 201 = "gebaeude/201.gif"
 202 = "gebaeude/202.gif"
 203 = "gebaeude/203.gif"
@@ -121,7 +120,6 @@ icon_buddy = "img/b.gif"
 207 = "gebaeude/207.gif"
 208 = "gebaeude/208.gif"
 209 = "gebaeude/209.gif"
-21 = "gebaeude/21.gif"
 210 = "gebaeude/210.gif"
 211 = "gebaeude/211.gif"
 212 = "gebaeude/212.gif"
@@ -131,22 +129,19 @@ icon_buddy = "img/b.gif"
 216 = "gebaeude/216.gif"
 218 = "gebaeude/218.gif"
 219 = "gebaeude/219.gif"
-;21_a = "gebaeude/21_a.gif"
-22 = "gebaeude/22.gif"
 220 = "gebaeude/220.gif"
 221 = "gebaeude/221.gif"
 222 = "gebaeude/222.gif"
 223 = "gebaeude/223.gif"
 224 = "gebaeude/224.gif"
 225 = "gebaeude/225.gif"
-23 = "gebaeude/23.gif"
-24 = "gebaeude/24.gif"
-3 = "gebaeude/3.gif"
-31 = "gebaeude/31.gif"
-33 = "gebaeude/33.gif"
-34 = "gebaeude/34.gif"
-35 = "gebaeude/35.gif"
-4 = "gebaeude/4.gif"
+
+228 = "gebaeude/228.jpg"
+229 = "gebaeude/229.jpg"
+230 = "gebaeude/230.jpg"
+231 = "gebaeude/231.jpg"
+232 = "gebaeude/232.jpg"
+
 401 = "gebaeude/401.gif"
 402 = "gebaeude/402.gif"
 403 = "gebaeude/403.gif"
@@ -156,13 +151,11 @@ icon_buddy = "img/b.gif"
 407 = "gebaeude/407.gif"
 408 = "gebaeude/408.gif"
 409 = "gebaeude/409.gif"
-41 = "gebaeude/41.gif"
-42 = "gebaeude/42.gif"
-43 = "gebaeude/43.gif"
-44 = "gebaeude/44.gif"
+
 501 = "gebaeude/501.gif"
 502 = "gebaeude/502.gif"
 503 = "gebaeude/503.gif"
+
 601 = "gebaeude/601.jpg"
 602 = "gebaeude/602.jpg"
 603 = "gebaeude/603.jpg"
@@ -178,12 +171,33 @@ icon_buddy = "img/b.gif"
 613 = "gebaeude/613.jpg"
 614 = "gebaeude/614.jpg"
 615 = "gebaeude/615.jpg"
+
 901 = "gebaeude/901.jpg"
 902 = "gebaeude/902.jpg"
 903 = "gebaeude/903.jpg"
 904 = "gebaeude/904.jpg"
 905 = "gebaeude/905.jpg"
 950 = "gebaeude/950.png"
+
+1001 = "gebaeude/1001.jpg"
+1002 = "gebaeude/1002.jpg"
+1003 = "gebaeude/1003.jpg"
+1004 = "gebaeude/1004.jpg"
+1005 = "gebaeude/1005.jpg"
+1006 = "gebaeude/1006.png"
+1008 = "gebaeude/1008.jpg"
+1009 = "gebaeude/1008.jpg"
+1010 = "gebaeude/1008.jpg"
+1101 = "gebaeude/1101.jpg"
+1102 = "gebaeude/1102.jpg"
+1103 = "gebaeude/1103.jpg"
+1104 = "gebaeude/1104.jpg"
+1105 = "gebaeude/1105.jpg"
+1106 = "gebaeude/1106.jpg"
+1107 = "gebaeude/1107.png"
+
+1601 = "gebaeude/1601.png"
+
 
 ; Menu
 menu_affiliates = "icons/menu_affiliates.png"
@@ -416,5 +430,9 @@ l_wasserplanet06 = "planeten/large/wasserplanet06.jpg"
 l_wasserplanet07 = "planeten/large/wasserplanet07.jpg"
 l_wasserplanet08 = "planeten/large/wasserplanet08.jpg"
 l_wasserplanet09 = "planeten/large/wasserplanet09.jpg"
+
+object_in_space = "planeten/object_in_space.jpg"
+s_object_in_space = "planeten/small/s_object_in_space.jpg"
+l_object_in_space = "planeten/large/object_in_space.png"
 
 menu_info_best_battles = "icons/menu_info_best_battles.png"
