MOD-misc-43a16.52: Support for core_festival module

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -198,6 +198,7 @@ icon_buddy = "img/b.gif"
 
 1601 = "gebaeude/1601.png"
 
+790001 = "gebaeude/790001.jpg"
 
 ; Menu
 menu_affiliates = "icons/menu_affiliates.png"
