--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -137,6 +137,7 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 1105 = "gebaeude/1105.jpg"
 1106 = "gebaeude/1106.jpg"
 
+790001 = "gebaeude/790001.jpg"
 
 help = "gfx/info-help.jpg"
 produktion = "gfx/ogame-produktion.jpg"
