SKIN-feat-43a19.1: New images for Mercenaries and Governors in supernova-ivash skin. Added large Governors images

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -157,13 +157,16 @@ icon_buddy = "img/b.gif"
 503 = "gebaeude/503.gif"
 
 601 = "gebaeude/601.jpg"
+601_large = "gebaeude/601_large.jpg"
 602 = "gebaeude/602.jpg"
 603 = "gebaeude/603.jpg"
 604 = "gebaeude/604.jpg"
 605 = "gebaeude/605.jpg"
+605_large = "gebaeude/605_large.jpg"
 606 = "gebaeude/606.jpg"
 607 = "gebaeude/607.jpg"
 608 = "gebaeude/608.jpg"
+608_large = "gebaeude/608_large.jpg"
 609 = "gebaeude/609.jpg"
 610 = "gebaeude/610.jpg"
 611 = "gebaeude/611.jpg"
