--- a/skins/supernova-ivash/skin.ini
+++ b/skins/supernova-ivash/skin.ini
@@ -106,19 +106,19 @@ navbar_metamatter = "navbar/navbar_metamatter_standard.png"
 502 = "gebaeude/502.jpg"
 503 = "gebaeude/503.gif"
 
-601 = "gebaeude/601.jpg"
-602 = "gebaeude/602.jpg"
+;601 = "gebaeude/601.jpg"
+;602 = "gebaeude/602.jpg"
 603 = "gebaeude/603.jpg"
 604 = "gebaeude/604.jpg"
-605 = "gebaeude/605.jpg"
-606 = "gebaeude/606.jpg"
-607 = "gebaeude/607.jpg"
-608 = "gebaeude/608.jpg"
+;605 = "gebaeude/605.jpg"
+;606 = "gebaeude/606.jpg"
+;607 = "gebaeude/607.jpg"
+;608 = "gebaeude/608.jpg"
 609 = "gebaeude/609.jpg"
-610 = "gebaeude/610.jpg"
-611 = "gebaeude/611.jpg"
+;610 = "gebaeude/610.jpg"
+;611 = "gebaeude/611.jpg"
 612 = "gebaeude/612.jpg"
-613 = "gebaeude/613.jpg"
+;613 = "gebaeude/613.jpg"
 614 = "gebaeude/614.jpg"
 615 = "gebaeude/615.jpg"
 
