SKIN-feat-43a19.2: Added large Mercenaries images

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -159,19 +159,25 @@ icon_buddy = "img/b.gif"
 601 = "gebaeude/601.jpg"
 601_large = "gebaeude/601_large.jpg"
 602 = "gebaeude/602.jpg"
+602_large = "gebaeude/602_large.jpg"
 603 = "gebaeude/603.jpg"
 604 = "gebaeude/604.jpg"
 605 = "gebaeude/605.jpg"
 605_large = "gebaeude/605_large.jpg"
 606 = "gebaeude/606.jpg"
+606_large = "gebaeude/606_large.jpg"
 607 = "gebaeude/607.jpg"
+607_large = "gebaeude/607_large.jpg"
 608 = "gebaeude/608.jpg"
 608_large = "gebaeude/608_large.jpg"
 609 = "gebaeude/609.jpg"
 610 = "gebaeude/610.jpg"
+610_large = "gebaeude/610_large.jpg"
 611 = "gebaeude/611.jpg"
+611_large = "gebaeude/611_large.jpg"
 612 = "gebaeude/612.jpg"
 613 = "gebaeude/613.jpg"
+613_large = "gebaeude/613_large.jpg"
 614 = "gebaeude/614.jpg"
 615 = "gebaeude/615.jpg"
 
