PAYMENT-45a21: Payment system refactoring

--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,14 @@
   "require": {
     "ext-json": "*",
     "ext-mysqli": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "ext-iconv": "*"
   },
   "require-dev": {
     "ext-json": "*",
     "ext-mysqli": "*",
     "ext-curl": "*",
+    "ext-iconv": "*",
     "phpunit/phpunit": "5.*"
   }
 }
