CODE-misc-45a56: Support for New Year 2019-2020

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 config.php
 *config.php
 
+# Ignore Yandex and Google placeholders
+/yandex_*.txt
+/google*.txt
+
+# Ignore skin xNova
+/skins/xnova/
+
 # Ignore forums
 /phpBB3/
 /forum/
