SKIN-feat-45a61: Support for WebP image format

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -35,6 +35,8 @@
 ; Plug for no image - to override default system plug
 ;_no_image = "/design/images/_no_image.png"
 
+; "_webp" suffix can be used as alternative image for web browsers with appropriate support
+
 ; Some black magic to support JS-templating
 ;UNIT_ID = "gebaeude/[UNIT_ID].gif"
 PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
