TPL-misc-45a118: Support for Defense button in NavBar

--- a/skins/EpicBlue/skin.ini
+++ b/skins/EpicBlue/skin.ini
@@ -45,6 +45,8 @@ PLANET_IMAGE_SMALL = "planeten/small/s_[PLANET_IMAGE].jpg"
 navbar_research = "/design/images/navbar_research_64x64.png"
 navbar_research_wide = "/design/images/navbar_research_standard.png"
 navbar_hangar = "/design/images/navbar_hangar.png"
+navbar_structures = "/design/images/navbar_structures.png"
+navbar_defense = "/design/images/navbar_defense.png"
 navbar_expedition = "/design/images/navbar_expedition_standard.png"
 navbar_fleet_own = "/design/images/navbar_fleet_own_standard.png"
 navbar_quest = "/design/images/navbar_quest_standard.png"
