MOD-misc-45d2: Support for NY-2022

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ config.php
 # Ignore Yandex and Google placeholders
 /yandex_*.txt
 /google*.txt
+/google*.html
 
 # Ignore skin xNova
 /skins/xnova/
