TOOL-init-46a69: Spritify tool - create single sprite from list of images

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "ext-json": "*",
     "ext-mysqli": "*",
     "ext-curl": "*",
-    "ext-iconv": "*"
+    "ext-iconv": "*",
+    "ext-gd": "*"
   },
   "require-dev": {
     "ext-json": "*",
