TOOL-feat-46a99: Spritify update: extract animated GIF's frames into single sprite line

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "ext-mysqli": "*",
     "ext-curl": "*",
     "ext-iconv": "*",
-    "ext-gd": "*"
+    "ext-gd": "*",
+    "stil/gif-endec": "^0.2.0"
   },
   "require-dev": {
     "ext-json": "*",
