COMPOSER-46a174: Added `psr/log`

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "stil/gif-endec": "^0.2.0",
     "mailgun/mailgun-php": "^3.0",
     "symfony/http-client": "^5.4",
-    "nyholm/psr7": "^1.8"
+    "nyholm/psr7": "^1.8",
+    "psr/log": "^1.1"
   },
   "require-dev": {
     "ext-json": "*",
